monticore-generator/src/test/resources/cocos/invalid/A4094/A4094Super.mc4
/* (c) https://github.com/MontiCore/monticore */

package cocos.invalid.A4094;

grammar A4094Super {

  Bla;

}
